syntax = "proto3";
package penumbra.chain;

import "crypto.proto";
import "transaction.proto";

// Global chain configuration data, such as chain ID, epoch duration, etc.
message ChainParams {
  // The identifier of the chain.
  string chain_id = 1;
  // The duration of each epoch, in number of blocks.
  uint64 epoch_duration = 2;
  // The number of epochs an unbonding note for before being released.
  uint64 unbonding_epochs = 3;
  // The maximum number of validators in the consensus set.
  uint64 active_validator_limit = 4;
  // The penalty, expressed in basis points, to be applied to slashed validators' rates.
  uint64 slashing_penalty = 5;
  // The base reward rate, expressed in basis points of basis points
  uint64 base_reward_rate = 9;
  /// Whether IBC (forming connections, processing IBC packets) is enabled.
  bool ibc_enabled = 6;
  /// Whether inbound ICS-20 transfers are enabled
  bool inbound_ics20_transfers_enabled = 7;
  /// Whether outbound ICS-20 transfers are enabled
  bool outbound_ics20_transfers_enabled = 8;
}

// TODO: delete with legacy code
// Information about a given asset at a given time (as specified by block
// height). Currently this only contains the total supply.
message AssetInfo {
  crypto.AssetId asset_id = 1;
  crypto.Denom denom = 2;
  uint64 as_of_block_height = 3;
  uint64 total_supply = 4;
}

// Contains the minimum data needed to update client state.
message CompactBlock {
  uint64 height = 1;
  // OutputBodies describing new notes.
  repeated transaction.OutputBody outputs = 2;
  // Nullifiers identifying spent notes.
  repeated bytes nullifiers = 3;
}

message KnownAssets {
  repeated crypto.Asset assets = 1;
}

// A spicy transaction ID
message NoteSource {
  bytes inner = 1;
}
